Fixed footer to be stuck to the bottom of page

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 .content {
   padding-left: 15em;
   padding-right: 15em;
+  background-color: green;
+  padding-top: 5em;
 }
 
 body {
@@ -212,6 +214,10 @@ a.nav-link:active {
   transform:scale(1.2);
   transition:.5s;
   opacity: 1;
+}
+
+.footer {
+  height: 10vh;
 }
 
 #my-email {
